# oop

./: Звіт про виконання лабораторної роботи №4.docx
OOP_lab_0/: main.cpp
OOP_lab_1/: OOP_lab_1.sln
OOP_lab_1/Debug/: OOP_lab_1.exe.metagen
OOP_lab_1/OOP_lab_1/: Form1.cpp  Form1.h  OOP_lab_1.vcxproj  OOP_lab_1.vcxproj.filters
OOP_lab_1/OOP_lab_1/Debug/: OOP_lab_1.Form1.resources  OOP_lab_1.exe.recipe  OOP_lab_1.vcxproj.FileListAbsolute.txt  OOP_lab_1.vcxproj.GenerateResource.cache
OOP_lab_1/OOP_lab_1/Debug/OOP_lab_1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OOP_lab_1.lastbuildstate  OOP_lab_1.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
OOP_lab_1/OOP_lab_1/Release/OOP_lab_1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OOP_lab_1.lastbuildstate
OOP_lab_2/: Звіт лабораторна робота #2.docx
OOP_lab_2/Lab_2/: Lab_2.sln
OOP_lab_2/Lab_2/Debug/: Lab_2.exe.metagen
OOP_lab_2/Lab_2/Lab_2/: Lab_2.vcxproj  MyForm.cpp  MyForm.h  MyForm.resx
OOP_lab_2/Lab_2/Lab_2/Debug/: Lab2.MyForm.resources  Lab_2.exe.recipe  (+2 more)
OOP_lab_3/: Звіт_3.docx
OOP_lab_3/OOP_lab_3/: CMakeLists.txt  Dyhotomia.cpp  Dyhotomia.h  main.cpp
OOP_lab_4/: CMakeLists.txt  ComputerScienceStudent.h  Employee.cpp  Employee.h  HardworkingStudent.h  Lecturer.h  Person.cpp  Person.h  Student.cpp  Student.h  Superstudent.cpp  lab_4_readme.md  main.cpp
OOP_lab_4-5/: ComputerScienceStudent.cpp  Employee.h  HardworkingStudent.cpp  Lecturer.cpp  Recruiter.cpp  Recruiter.h  Superstudent.h
(+8 files in other folders)
