cmake_minimum_required(VERSION 3.17)
project(OOP_lab_4)

set(CMAKE_CXX_STANDARD 14)

add_executable(OOP_lab_4 main.cpp Person.cpp Person.h Student.cpp Student.h Employee.cpp Employee.h Lecturer.cpp Lecturer.h Recruiter.cpp Recruiter.h ComputerScienceStudent.cpp ComputerScienceStudent.h HardworkingStudent.cpp HardworkingStudent.h Superstudent.cpp Superstudent.h)